# lagfm

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: desktop-build.yml  mobile-build.yml
apps/desktop/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.css  App.jsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  hooks.nsh  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/nsis/: Spanish.nsh  installer.nsi
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AppFooter.jsx  RadioPanels.jsx  StatusHeader.jsx  TrackInfo.jsx  VolumeDial.jsx
apps/desktop/src/data/: internalTracks.js  translations.js
apps/desktop/src/hooks/: useAudioPlayer.js  useCustomStreams.js  useDynamicStreams.js  useFavorites.js
apps/desktop/src/services/: api.js
apps/desktop/src/utils/: formatters.js
apps/mobile/: .gitignore  README.md  capacitor.config.json  index.html  mock_lagnode.cjs  package-lock.json  package.json
apps/mobile/android/: build.gradle  capacitor.settings.gradle  gradle.properties  settings.gradle  variables.gradle
apps/mobile/android/app/: build.gradle  capacitor.build.gradle
apps/mobile/android/gradle/: gradle-daemon-jvm.properties
apps/mobile/src/: App.css  App.jsx  main.jsx
apps/mobile/src/components/: ActionBar.jsx  AppFooter.jsx  OdometerDisplay.jsx  RadioPanels.jsx  StatusHeader.jsx  TrackInfo.jsx  VolumeDial.jsx
(+30 files in other folders)
