[package]
name = "lagfm"
version = "6.0.0"
description = "LAGFM - Optimized Radio for Gamers"
authors = ["dr.will / CONVOYRAMA"]
edition = "2021"

[lib]
name = "lagfm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
once_cell = "1"

# Dependencias condicionales: Solo se instalan y usan en Windows
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading"] }
